--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>icon.ico">
+    <script language="javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=01f0575af94104cc949ebff734b2de37&plugin=AMap.ControlBar"></script>
+    <script language="javascript" src="https://api.map.baidu.com/api?v=3.0&ak=D94aYM8AftItmv4lFKXGnjZeg7SdZ9yx&s=1"></script>
+    <!-- <script src="https://webapi.amap.com/maps?v=1.4.15&key=271a4d584bf75d038466fbb3dc0c5942"></script> -->
     <!-- 使用 CDN 加速的 CSS 文件，配置在 vue.config.js 下 -->
     <% for (var i in htmlWebpackPlugin.options.cdn&&htmlWebpackPlugin.options.cdn.css) { %>
     <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet">
